# django-docker

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  run-server.sh  tailwind.config.js
app/: celerybeat-schedule
app/backend/: .env.sample  asgi.py  celery.py  settings.py  urls.py  utils.py  wsgi.py
app/core/: admin.py  manager.py  models.py  serializers.py  views.py
app/core/management/commands/: seed.sql  wait_for_db.py
app/core/migrations/: 0001_initial.py
app/static/css/: styles.css
app/templates/admin/: index.html
app/templates/admin/components/: actions.html  activity.html  activity_item.html  chart.html  cta.html  hero.html  navigation.html  stats.html
backend/: .gitignore  Dockerfile  compose.yaml  pyproject.toml  run-server.sh
backend/.devcontainer/: devcontainer.json
backend/app/core/: manager.py  models.py  serializers.py  utils.py  views.py
backend/app/core/management/commands/: seed_db.py
backend/app/core/signals/: __init__.py
backend/app/parking/: settings.py  urls.py
nginx/: dockerfile  nginx.conf
