[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "Django Docker Startup template by Stero tECH"
authors = ["Samuel Agyei <88740526+SterotECH@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
django-unfold = "^0.18.0"
django-filter = "^23.5"
django-markdown = "^0.8.4"
django-cors-headers = "^4.3.1"
django-mail-templated = "^2.6.5"
daphne = "^4.0.0"
channels = "^4.0.0"
psycopg2 = "^2.9.9"
celery = "^5.3.6"
redis = "^5.0.1"
django-redis = "^5.4.0"
whitenoise = "^6.6.0"
django-import-export = "^3.3.4"
django-environ = "^0.11.2"
pillow = "^10.1.0"
django-types = "^0.18.0"
djangorestframework-types = "^0.8.0"
django-stubs-ext = "^4.2.2"
drf-nested-routers = "^0.93.4"
drf-spectacular = {extras = ["sidecar"], version = "^0.26.5"}
drf-yasg = "^1.21.7"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
channels-redis = "^4.1.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[tool.ruff]
fix = true
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    "**/migrations"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
